fixed image on small screens

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -80,7 +80,7 @@ blockquote {
 #me {
   margin: 2rem;
   border-radius: 50%;
-  width: 20rem;
+  max-width: 20rem;
   box-shadow: 0.2rem 0.2rem 0 $ruber, 0.4rem 0.4rem 0 $claret;
 }
 
